# docker-ftp-prototype

./: .gitignore  Dockerfile  README.md  docker-compose.yml
ftp-mounts/ssl/: localhost.crt  localhost.key
ftp-server/: Dockerfile
uploader/: pyproject.toml  upload.py
