[project]
name = "uploader"
version = "0.0.1"
authors = [
    { name="Stef Piatek" },
]
description = "Uploads files to an ftp server"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "pytest"
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
